@@ -344,18 +344,19 @@ DuckDuckGo for the keywords "dillo browser".
 <h3 id="tabs">Tabs</h3>
 <p>
 Dillo can open different web pages into tabs. To open a link in a new tab click
-the middle button instead of the left button. The same applies to buttons to
-submit a form. A new tab can also be opened from the <code>File</code> menu or
-using the shortcut <code>Ctrl+T</code>.
+the middle button instead of the left button or keep <code>Control</code>
+pressed while left-clicking a link. The same applies to buttons to submit a
+form. A new tab can also be opened from the <code>File</code> menu or using the
+shortcut <code>Ctrl+T</code>.
 <p>
-Press <code>Shift</code> while middle-clicking a link to automatically focus the
-new tab. If you want this behaviour to be the default, set the following option
+Press <code>Shift</code> while opening a page in a new tab to focus the tab. If
+you want this behaviour to be the default, set the following option
 in the <a href="#dillorc">dillorc</a> configuration file:
 <pre>
 focus_new_tab=YES
 </pre>
-If this option is set, pressing <code>Shift</code> middle-clicking will instead
-avoid focusing the new tab.
+If this option is set, pressing <code>Shift</code> will instead avoid focusing
+the new tab.
 <p>
 It is also possible to have the middle-click open a window instead of a tab. For
 this set the option:
